Fix for editor toolbar not visible

--- a/resources/stylesheets/dimensions.less
+++ b/resources/stylesheets/dimensions.less
@@ -1,4 +1,4 @@
-@banner-top-height: 0.1rem;
+@banner-top-height: 0rem;
 @custom-menu-top-height: 2.5rem;
 @menu-top-height: 4rem;
 @menu-top-mobile-height: 3.125rem;
